[gd_scene load_steps=40 format=3 uid="uid://coi7v6u1ej205"]

[ext_resource type="Script" uid="uid://bpw00nll7hl8b" path="res://characters/cat/cat.gd" id="1_c6vmg"]
[ext_resource type="Texture2D" uid="uid://bgoycm4nj5uwi" path="res://assets/images/XmasCatFree/Run.png" id="1_uki7w"]
[ext_resource type="Texture2D" uid="uid://c35xt4gxcsnfu" path="res://assets/images/XmasCatFree/Attack.png" id="1_xfgbo"]
[ext_resource type="Texture2D" uid="uid://b58v8oyccbeha" path="res://assets/images/XmasCatFree/Jump.png" id="2_c6vmg"]
[ext_resource type="AudioStream" uid="uid://pihes7irhsh6" path="res://assets/audio/sfx/jump_short.wav" id="5_uhhm1"]
[ext_resource type="AudioStream" uid="uid://dlpea1vguy7k1" path="res://assets/audio/sfx/punch.wav" id="6_wudth"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rmtou"]
atlas = ExtResource("1_xfgbo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oob0m"]
atlas = ExtResource("1_xfgbo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmtdh"]
atlas = ExtResource("1_xfgbo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlapd"]
atlas = ExtResource("1_xfgbo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgsuw"]
atlas = ExtResource("1_xfgbo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cdyq"]
atlas = ExtResource("1_xfgbo")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iujxw"]
atlas = ExtResource("1_xfgbo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmv2b"]
atlas = ExtResource("1_xfgbo")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpx8o"]
atlas = ExtResource("1_xfgbo")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd6r6"]
atlas = ExtResource("2_c6vmg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24a5f"]
atlas = ExtResource("2_c6vmg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21016"]
atlas = ExtResource("2_c6vmg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu1hq"]
atlas = ExtResource("2_c6vmg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lty2"]
atlas = ExtResource("2_c6vmg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63aj4"]
atlas = ExtResource("2_c6vmg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujew"]
atlas = ExtResource("2_c6vmg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5o3j"]
atlas = ExtResource("2_c6vmg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft0aq"]
atlas = ExtResource("2_c6vmg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpe5l"]
atlas = ExtResource("2_c6vmg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_acb6p"]
atlas = ExtResource("2_c6vmg")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvtsw"]
atlas = ExtResource("2_c6vmg")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayf6t"]
atlas = ExtResource("2_c6vmg")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uki7w"]
atlas = ExtResource("1_uki7w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt5bw"]
atlas = ExtResource("1_uki7w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfgbo"]
atlas = ExtResource("1_uki7w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6vmg"]
atlas = ExtResource("1_uki7w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhhm1"]
atlas = ExtResource("1_uki7w")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wudth"]
atlas = ExtResource("1_uki7w")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofeb1"]
atlas = ExtResource("1_uki7w")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oob0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmtou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oob0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmtdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlapd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgsuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cdyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iujxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmv2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpx8o")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd6r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24a5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21016")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu1hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lty2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63aj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mujew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5o3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft0aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpe5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acb6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvtsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayf6t")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uki7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt5bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfgbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6vmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhhm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wudth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofeb1")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xfgbo"]
height = 22.000002

[sub_resource type="CircleShape2D" id="CircleShape2D_uhhm1"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhhm1"]
size = Vector2(16, 2)

[node name="Cat" type="CharacterBody2D"]
script = ExtResource("1_c6vmg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oob0m")
animation = &"jump"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(17, 20)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_xfgbo")

[node name="Sounds" type="Node2D" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_uhhm1")
volume_db = 10.0
pitch_scale = 5.0

[node name="PunchSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_wudth")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(17, 18)
shape = SubResource("CircleShape2D_uhhm1")

[node name="FootArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FootArea"]
position = Vector2(17, 31)
shape = SubResource("RectangleShape2D_uhhm1")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="FootArea" to="." method="_on_foot_area_body_entered"]
